Trying to fix dark mode switch on mobile | Commit 5

--- a/site/styles/base.scss
+++ b/site/styles/base.scss
@@ -87,7 +87,7 @@ body {
   position: relative;
   min-height: 100%;
   margin: 0;
-  background: white !important;
+  // background: white !important;
 }
 
 a {
